# ArUco_lidar_camera_calibration

./: README.md
aruco_mapping/data/: lbas_camera.ini
aruco_mapping/src/: aruco_mapping.cpp
aruco_ros/aruco/src/aruco/: markerdetector.cpp
capture_img/: CMakeLists.txt  package.xml
capture_img/launch/: run.launch
capture_img/src/: capture_img.cpp
lidar_camera_calibration/conf/: config_file.txt  lidar_camera_calibration.yaml  marker_coordinates.txt
lidar_camera_calibration/include/lidar_camera_calibration/: Find_RT.h  PreprocessUtils.h
lidar_camera_calibration/launch/: aruco.launch  calibration.launch  start_lidar_camera.launch
lidar_camera_calibration/src/: Corners.cpp
rs_to_velodyne/launch/: rs_to_velodyne.launch
